TOPページにファーストビュー追加（レスポンシブ時デザイン崩れ有）

--- a/top.html
+++ b/top.html
@@ -39,6 +39,26 @@
       </header>
 
       <main>
+        <section id="FIRST-VIEW">
+          <div class="first_view">
+            <div class="catch_copy">
+              <h1>
+                安全と楽しさを<br>
+                あなたの<br>
+                自転車ライフに<br>
+              </h1>
+              <p class="catch_copy_small">
+                自転車の在庫情報をご確認いただけます。<br>
+                以下の検索フォームよりご確認くださいませ。
+              </p>
+            </div>
+            <div class="first_view_img">
+              <img src="../image/first_view_img.jpg">
+            </div> 
+            <div class="first_view_orange">
+            </div>
+          </div>
+        </section>
         <section id="SEARCH">
           <div class="search_form">
             <p class="cationary_note_search">※在庫と表示されている場合でも販売済みの自転車である場合がございます。<br>
