feat: TOPページのチェックボックス位置調整およびスマホ時検索結果コンテンツ幅調整

--- a/top.html
+++ b/top.html
@@ -39,26 +39,25 @@
       </header>
 
       <main>
-        <section id="FIRST-VIEW">
-          <div class="first_view">
-            <div class="catch_copy">
-              <h1>
-                安全と楽しさを<br>
-                あなたの<br>
-                自転車ライフに<br>
-              </h1>
-              <p class="catch_copy_small">
-                自転車の在庫情報をご確認いただけます。<br>
-                以下の検索フォームよりご確認くださいませ。
-              </p>
-            </div>
-            <div class="first_view_img">
-              <img src="../image/first_view_img.jpg">
-            </div> 
-            <div class="first_view_orange">
-            </div>
+        <!-- <section class="first_view">
+          <div class="catch_copy">
+            <h1>
+              安全と楽しさを<br>
+              あなたの<br>
+              自転車ライフに<br>
+            </h1>
+            <p class="catch_copy_small">
+              自転車の在庫情報をご確認いただけます。<br>
+              以下の検索フォームよりご確認くださいませ。
+            </p>
           </div>
-        </section>
+          <div class="first_view_img">
+            <img src="../image/first_view_img.jpg">
+          </div> 
+          <div class="first_view_orange">
+          </div>
+        </section> -->
+        
         <section id="SEARCH">
           <div class="search_form">
             <p class="cationary_note_search">※在庫と表示されている場合でも販売済みの自転車である場合がございます。<br>
@@ -67,13 +66,56 @@
             <form action="/search" method="get">
               <div class="search_box_shop">
                 <span class="search_box_title">店舗別検索</span><br>
-                <label><input type="checkbox" name="category" value="" class="shop"><img src="../image/shop.png" class="shop_img"></label>
-                <label><input type="checkbox" name="category" value="" class="shop"><img src="../image/shop.png" class="shop_img"></label>
-                <label><input type="checkbox" name="category" value="" class="shop"><img src="../image/shop.png" class="shop_img"></label>
-                <label><input type="checkbox" name="category" value="" class="shop"><img src="../image/shop.png" class="shop_img"></label>
-                <label><input type="checkbox" name="category" value="" class="shop"><img src="../image/shop.png" class="shop_img"></label>
-                <label><input type="checkbox" name="category" value="" class="shop"><img src="../image/shop.png" class="shop_img"></label>
-                <label><input type="checkbox" name="category" value="" class="shop"><img src="../image/shop.png" class="shop_img"></label>
+                <div class="d-flex flex-wrap">
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <label class="form-check-label" for="flexCheckDefault">
+                      <img src="../image/shop.png" class="shop_img">
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <label class="form-check-label" for="flexCheckDefault">
+                      <img src="../image/shop.png" class="shop_img">
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <label class="form-check-label" for="flexCheckDefault">
+                      <img src="../image/shop.png" class="shop_img">
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <label class="form-check-label" for="flexCheckDefault">
+                      <img src="../image/shop.png" class="shop_img">
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <label class="form-check-label" for="flexCheckDefault">
+                      <img src="../image/shop.png" class="shop_img">
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <label class="form-check-label" for="flexCheckDefault">
+                      <img src="../image/shop.png" class="shop_img">
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <label class="form-check-label" for="flexCheckDefault">
+                      <img src="../image/shop.png" class="shop_img">
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <label class="form-check-label" for="flexCheckDefault">
+                      <img src="../image/shop.png" class="shop_img">
+                    </label>
+                  </div>
+                </div>
               </div>
               <br>
               <span class="search_box_title">車種別検索</span><br>
