feat: 検索結果詳細画面を追加（swiper）

--- a/serch_detail.html
+++ b/serch_detail.html
@@ -39,12 +39,41 @@
     </header>
 
     <main>
-      
+      <div class="wrapper">
+        <div class="swiper main-swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide"><div class="slide-content"><p>slide 1</p></div></div>
+            <div class="swiper-slide"><div class="slide-content"><p>slide 2</p></div></div>
+            <div class="swiper-slide"><div class="slide-content"><p>slide 3</p></div></div>
+            <div class="swiper-slide"><div class="slide-content"><p>slide 4</p></div></div>
+            <div class="swiper-slide"><div class="slide-content"><p>slide 5</p></div></div>
+            <div class="swiper-slide"><div class="slide-content"><p>slide 6</p></div></div>
+            <div class="swiper-slide"><div class="slide-content"><p>slide 7</p></div></div>
+            <div class="swiper-slide"><div class="slide-content"><p>slide 8</p></div></div>
+            <div class="swiper-slide"><div class="slide-content"><p>slide 9</p></div></div>
+            <div class="swiper-slide"><div class="slide-content"><p>slide 10</p></div></div>
+          </div>
+        </div>
+        <div class="swiper thumb-swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide"><div class="slide-content"><p>slide 1</p></div></div>
+            <div class="swiper-slide"><div class="slide-content"><p>slide 2</p></div></div>
+            <div class="swiper-slide"><div class="slide-content"><p>slide 3</p></div></div>
+            <div class="swiper-slide"><div class="slide-content"><p>slide 4</p></div></div>
+            <div class="swiper-slide"><div class="slide-content"><p>slide 5</p></div></div>
+            <div class="swiper-slide"><div class="slide-content"><p>slide 6</p></div></div>
+            <div class="swiper-slide"><div the "slide-content"><p>slide 7</p></div></div>
+            <div class="swiper-slide"><div class="slide-content"><p>slide 8</p></div></div>
+            <div class="swiper-slide"><div the "slide-content"><p>slide 9</p></div></div>
+            <div class="swiper-slide"><div the "slide-content"><p>slide 10</p></div></div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer class="footer">
       <a href="#" class="footer_logo"></a>
     </footer>
-    <script src="js/custom.js"></script>
+    <script src="../js/custom.js"></script>
   </body>
   </html>
