feat: ファーストビューを修正1（calcうまく使えず）

--- a/top.html
+++ b/top.html
@@ -39,24 +39,24 @@
       </header>
 
       <main>
-        <!-- <section class="first_view">
+        <section class="first_view">
           <div class="catch_copy">
-            <h1>
+            <h1 class="first_view_txt">
               安全と楽しさを<br>
               あなたの<br>
               自転車ライフに<br>
             </h1>
-            <p class="catch_copy_small">
+            <p class="first_view_txt">
               自転車の在庫情報をご確認いただけます。<br>
               以下の検索フォームよりご確認くださいませ。
             </p>
           </div>
           <div class="first_view_img">
-            <img src="../image/first_view_img.jpg">
+            <img src="../image/first_view_img.jpg" align="right">
           </div> 
-          <div class="first_view_orange">
-          </div>
-        </section> -->
+          <!-- <div class="first_view_orange">
+          </div> -->
+        </section>
         
         <section id="SEARCH">
           <div class="search_form">
