feat: 検索結果詳細画面の詳細・ボタンを作成

--- a/top.html
+++ b/top.html
@@ -54,10 +54,10 @@
           <div class="first_view_img">
             <img src="../image/first_view_img.jpg" align="right">
           </div> 
-          <!-- <div class="first_view_orange">
-          </div> -->
         </section>
-        
+          <div class="first_view_orange">
+          </div>
+
         <section id="SEARCH">
           <div class="search_form">
             <p class="cationary_note_search">※在庫と表示されている場合でも販売済みの自転車である場合がございます。<br>
