feat: 詳細画面swiper(scriptをhead内に変更するも適用されず)

--- a/serch_detail.html
+++ b/serch_detail.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="css/custom.css" />
     <!-- <link rel="icon" type="image/png" href="favicon.ico"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="js/custom.js"></script>
   </head>
   <body>
     <header>
@@ -38,10 +40,10 @@
       </div>
     </header>
 
-    <main>
+    <main id="SEARCH-DETAIL">
 
       <!-- スライダー（junpei） -->
-<!-- <div class="swiper slider">
+<div class="swiper slider">
   <div class="swiper-wrapper">
     <div class="swiper-slide">
       <img src="../image/bicycle_sample.png" alt="" />
@@ -52,14 +54,14 @@
     <div class="swiper-slide">
       <img src="../image/bicycle_sample.png" alt="" />
     </div>
-  </div> -->
+  </div> 
   <!-- 前後の矢印（junpei） -->
-  <!-- <div class="swiper-button-next"></div>
+  <div class="swiper-button-next"></div>
   <div class="swiper-button-prev"></div>
-</div> -->
+</div>
 
 <!-- サムネイル（junpei） -->
-<!-- <div class="swiper slider-thumbnail">
+<div class="swiper slider-thumbnail">
   <div class="swiper-wrapper">
     <div class="swiper-slide">
       <img src="../image/bicycle_sample.png" alt="" />
@@ -71,7 +73,7 @@
       <img src="../image/bicycle_sample.png" alt="" />
     </div>
   </div>
-</div> -->
+</div>
 
 
 
@@ -127,7 +129,5 @@
     <footer class="footer">
       <a href="#" class="footer_logo"></a>
     </footer>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="js/custom.js"></script>
   </body>
   </html>
