--- a/serch_detail.html
+++ b/serch_detail.html
@@ -17,11 +17,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Old+Mincho&display=swap" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/custom.css" />
     <!-- <link rel="icon" type="image/png" href="favicon.ico"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="js/custom.js"></script>
+    <link
+    rel="stylesheet"
+    href="https://unpkg.com/swiper@11/swiper-bundle.min.css"
+    />
+    <link rel="stylesheet" href="css/custom.css" />
+
   </head>
   <body>
     <header>
@@ -129,5 +132,8 @@
     <footer class="footer">
       <a href="#" class="footer_logo"></a>
     </footer>
+  <script src="https://unpkg.com/swiper@11/swiper-bundle.min.js"></script>
+  <script src="js/custom.js"></script>
+
   </body>
   </html>
