feat: TOP画面　FV・ヘッダー位置・検索画面余白　修正

--- a/top.html
+++ b/top.html
@@ -61,10 +61,10 @@
           <div class="search_form">
             <p class="cationary_note_search">※在庫と表示されている場合でも販売済みの自転車である場合がございます。<br>
               そのため、お目当ての自転車がある場合は、事前に各店舗へご連絡いただくことをお勧めいたします。
-            </p>
+            </p><br>
             <form action="/search" method="get">
               <div class="search_box_shop">
-                <span class="search_box_title">店舗別検索</span><br>
+                <span class="search_box_title">店舗別検索</span><br><br>
                 <div class="d-flex flex-wrap">
                   <div class="form-check">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
@@ -117,7 +117,7 @@
                 </div>
               </div>
               <br>
-              <span class="search_box_title">車種別検索</span><br>
+              <span class="search_box_title">車種別検索</span><br><br>
               <select class="form-select" aria-label="Default select">
                 <option value="">ファミリーサイクル</option>
                 <option value="">シティーサイクル</option>
@@ -133,7 +133,7 @@
                 <option value="">電動アシストスポーツ車</option>
               </select><br>
               <br>
-              <span class="search_box_title">メーカー検索</span><br>
+              <span class="search_box_title">メーカー検索</span><br><br>
               <select class="form-select" aria-label="Default select">
                 <option value="">BRIDESTONE</option>
                 <option value="">Panasonic</option>
