feat: 詳細画面9割完成（残り swiper<>修正のみ）

--- a/serch_detail.html
+++ b/serch_detail.html
@@ -45,7 +45,7 @@
 
     <main id="SEARCH-DETAIL">
 
-      <!-- スライダー（junpei） -->
+      <!-- スライダー -->
 <div class="swiper slider">
   <div class="swiper-wrapper">
     <div class="swiper-slide">
@@ -56,6 +56,12 @@
     </div>
     <div class="swiper-slide">
       <img src="../image/bicycle_sample.png" alt="" />
+    </div>
+    <div class="swiper-slide">
+      <img src="../image/bicycle_sample2.jpg" alt="" />
+    </div>
+    <div class="swiper-slide">
+      <img src="../image/bicycle_sample3.jpg" alt="" />
     </div>
   </div> 
   <!-- 前後の矢印（junpei） -->
@@ -74,6 +80,12 @@
     </div>
     <div class="swiper-slide">
       <img src="../image/bicycle_sample.png" alt="" />
+    </div>
+    <div class="swiper-slide">
+      <img src="../image/bicycle_sample2.jpg" alt="" />
+    </div>
+    <div class="swiper-slide">
+      <img src="../image/bicycle_sample3.jpg" alt="" />
     </div>
   </div>
 </div>
