feat: 詳細画面　PC時のswiperの画像の大きさ調整、swiperボタンを変更

--- a/serch_detail.html
+++ b/serch_detail.html
@@ -24,7 +24,6 @@
     href="https://unpkg.com/swiper@11/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="css/custom.css" />
-
   </head>
   <body>
     <header>
@@ -43,104 +42,99 @@
       </div>
     </header>
 
-    <main id="SEARCH-DETAIL">
-
-      <!-- スライダー -->
-<div class="swiper slider">
-  <div class="swiper-wrapper">
-    <div class="swiper-slide">
-      <img src="../image/bicycle_sample.png" alt="" />
-    </div>
-    <div class="swiper-slide">
-      <img src="../image/bicycle_sample.png" alt="" />
-    </div>
-    <div class="swiper-slide">
-      <img src="../image/bicycle_sample.png" alt="" />
-    </div>
-    <div class="swiper-slide">
-      <img src="../image/bicycle_sample2.jpg" alt="" />
-    </div>
-    <div class="swiper-slide">
-      <img src="../image/bicycle_sample3.jpg" alt="" />
-    </div>
-  </div> 
-  <!-- 前後の矢印（junpei） -->
-  <div class="swiper-button-next"></div>
-  <div class="swiper-button-prev"></div>
-</div>
-
-<!-- サムネイル（junpei） -->
-<div class="swiper slider-thumbnail">
-  <div class="swiper-wrapper">
-    <div class="swiper-slide">
-      <img src="../image/bicycle_sample.png" alt="" />
-    </div>
-    <div class="swiper-slide">
-      <img src="../image/bicycle_sample.png" alt="" />
-    </div>
-    <div class="swiper-slide">
-      <img src="../image/bicycle_sample.png" alt="" />
-    </div>
-    <div class="swiper-slide">
-      <img src="../image/bicycle_sample2.jpg" alt="" />
-    </div>
-    <div class="swiper-slide">
-      <img src="../image/bicycle_sample3.jpg" alt="" />
-    </div>
-  </div>
-</div>
-
-
-
-      <!-- <div class="wrapper">
-        <div class="swiper main-swiper">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide"><div class="slide-content"><p>slide 1</p></div></div>
-            <div class="swiper-slide"><div class="slide-content"><p>slide 2</p></div></div>
-            <div class="swiper-slide"><div class="slide-content"><p>slide 3</p></div></div>
-            <div class="swiper-slide"><div class="slide-content"><p>slide 4</p></div></div>
-            <div class="swiper-slide"><div class="slide-content"><p>slide 5</p></div></div>
-            <div class="swiper-slide"><div class="slide-content"><p>slide 6</p></div></div>
-            <div class="swiper-slide"><div class="slide-content"><p>slide 7</p></div></div>
-            <div class="swiper-slide"><div class="slide-content"><p>slide 8</p></div></div>
-            <div class="swiper-slide"><div class="slide-content"><p>slide 9</p></div></div>
-            <div class="swiper-slide"><div class="slide-content"><p>slide 10</p></div></div>
-          </div>
-        </div>
-        <div class="swiper thumb-swiper">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide"><div class="slide-content"><p>slide 1</p></div></div>
-            <div class="swiper-slide"><div class="slide-content"><p>slide 2</p></div></div>
-            <div class="swiper-slide"><div class="slide-content"><p>slide 3</p></div></div>
-            <div class="swiper-slide"><div class="slide-content"><p>slide 4</p></div></div>
-            <div class="swiper-slide"><div class="slide-content"><p>slide 5</p></div></div>
-            <div class="swiper-slide"><div class="slide-content"><p>slide 6</p></div></div>
-            <div class="swiper-slide"><div the "slide-content"><p>slide 7</p></div></div>
-            <div class="swiper-slide"><div class="slide-content"><p>slide 8</p></div></div>
-            <div class="swiper-slide"><div the "slide-content"><p>slide 9</p></div></div>
-            <div class="swiper-slide"><div the "slide-content"><p>slide 10</p></div></div>
-          </div>
-        </div>
-      </div> -->
-
-      <div class="detail_card">
-          <div class="detail_card_body">
-            <h7 class="detail_card_title">【モデル】【BS】ﾋﾞｯｹﾎﾟｰﾗｰe(BP0C40.ﾀﾞｰｸｸﾞﾚｰ)</h7><br><br>
-            <p class="detail_card-text">店舗：亀戸店<br>
-            車種：自転車 一般車<br>
-            メーカー：Panasonic<br>
-            在庫数：1台<br>
-            価格：◯◯円<br>
-            お問い合わせ番号：10003029</p>
-          </div>
+    <div class="wrapper">
+      <main id="SEARCH-DETAIL">
+        <!-- スライダー -->
+      <div class="swiper slider">
+        <div class="swiper-wrapper">
+      <div class="swiper-slide">
+        <img src="../image/bicycle_sample.png" alt="" />
       </div>
-
-      <div class="contact_btn">
-        <p class="back_btn"><a href="top.html">一覧画面へ戻る</a></p>
-        <p class="tel_btn"><i class="bi bi-telephone text-white pe-1"></i><a href="tel:#">お問い合わせ</a></p>
+      <div class="swiper-slide">
+        <img src="../image/bicycle_sample.png" alt="" />
       </div>
-    </main>
-
+      <div class="swiper-slide">
+        <img src="../image/bicycle_sample.png" alt="" />
+      </div>
+      <div class="swiper-slide">
+        <img src="../image/bicycle_sample2.jpg" alt="" />
+      </div>
+      <div class="swiper-slide">
+        <img src="../image/bicycle_sample3.jpg" alt="" />
+      </div>
+        </div> 
+        <!-- 前後の矢印 -->
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+      </div>
+      
+      <!-- サムネイル（junpei） -->
+      <div class="swiper slider-thumbnail">
+        <div class="swiper-wrapper">
+      <div class="swiper-slide">
+        <img src="../image/bicycle_sample.png" alt="" />
+      </div>
+      <div class="swiper-slide">
+        <img src="../image/bicycle_sample.png" alt="" />
+      </div>
+      <div class="swiper-slide">
+        <img src="../image/bicycle_sample.png" alt="" />
+      </div>
+      <div class="swiper-slide">
+        <img src="../image/bicycle_sample2.jpg" alt="" />
+      </div>
+      <div class="swiper-slide">
+        <img src="../image/bicycle_sample3.jpg" alt="" />
+      </div>
+        </div>
+      </div>
+        <!-- <div class="wrapper">
+          <div class="swiper main-swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide"><div class="slide-content"><p>slide 1</p></div></div>
+              <div class="swiper-slide"><div class="slide-content"><p>slide 2</p></div></div>
+              <div class="swiper-slide"><div class="slide-content"><p>slide 3</p></div></div>
+              <div class="swiper-slide"><div class="slide-content"><p>slide 4</p></div></div>
+              <div class="swiper-slide"><div class="slide-content"><p>slide 5</p></div></div>
+              <div class="swiper-slide"><div class="slide-content"><p>slide 6</p></div></div>
+              <div class="swiper-slide"><div class="slide-content"><p>slide 7</p></div></div>
+              <div class="swiper-slide"><div class="slide-content"><p>slide 8</p></div></div>
+              <div class="swiper-slide"><div class="slide-content"><p>slide 9</p></div></div>
+              <div class="swiper-slide"><div class="slide-content"><p>slide 10</p></div></div>
+            </div>
+          </div>
+          <div class="swiper thumb-swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide"><div class="slide-content"><p>slide 1</p></div></div>
+              <div class="swiper-slide"><div class="slide-content"><p>slide 2</p></div></div>
+              <div class="swiper-slide"><div class="slide-content"><p>slide 3</p></div></div>
+              <div class="swiper-slide"><div class="slide-content"><p>slide 4</p></div></div>
+              <div class="swiper-slide"><div class="slide-content"><p>slide 5</p></div></div>
+              <div class="swiper-slide"><div class="slide-content"><p>slide 6</p></div></div>
+              <div class="swiper-slide"><div the "slide-content"><p>slide 7</p></div></div>
+              <div class="swiper-slide"><div class="slide-content"><p>slide 8</p></div></div>
+              <div class="swiper-slide"><div the "slide-content"><p>slide 9</p></div></div>
+              <div class="swiper-slide"><div the "slide-content"><p>slide 10</p></div></div>
+            </div>
+          </div>
+        </div> -->
+        <div class="detail_card">
+            <div class="detail_card_body">
+              <h7 class="detail_card_title">【モデル】【BS】ﾋﾞｯｹﾎﾟｰﾗｰe(BP0C40.ﾀﾞｰｸｸﾞﾚｰ)</h7><br><br>
+              <p class="detail_card-text">店舗：亀戸店<br>
+              車種：自転車 一般車<br>
+              メーカー：Panasonic<br>
+              在庫数：1台<br>
+              価格：◯◯円<br>
+              お問い合わせ番号：10003029</p>
+            </div>
+        </div>
+        <div class="contact_btn">
+          <p class="back_btn"><a href="top.html">一覧画面へ戻る</a></p>
+          <p class="tel_btn"><i class="bi bi-telephone text-white pe-1"></i><a href="tel:#">お問い合わせ</a></p>
+        </div>
+      </main>
+    </div>
     <footer class="footer">
       <a href="#" class="footer_logo"></a>
     </footer>
